# rafor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
datasets/: README.md
examples/: dt_classifier.rs  dt_regressor.rs  rf_classifier.rs  rf_regressor.rs  serialization.rs
python_tests/: requirements.txt  tests.py
src/: classes_mapping.rs  config.rs  config_builders.rs  dataset.rs  ensemble_classifier.rs  ensemble_predictor.rs  ensemble_regressor.rs  ensemble_trainer.rs  labels.rs  lib.rs  metrics.rs  options.rs  tests.rs  trainer_builders.rs  tree_classifier.rs  tree_regressor.rs  utils.rs  weight.rs  weightable.rs
src/decision_forest/: ensemble_classifier.rs  ensemble_predictor.rs  ensemble_regressor.rs  ensemble_trainer.rs  mod.rs
src/decision_tree/: block_tree.rs  classes_mapping.rs  classifier_model.rs  compact_tree.rs  decision_tree.rs  metrics.rs  mod.rs  regressor_model.rs  splitter.rs  trainer.rs  trainset.rs  tree_builder.rs  tree_classifier.rs  tree_classifier_impl.rs  tree_regressor.rs  tree_regressor_impl.rs  tree_trainer.rs
